@@ -1207,6 +1207,9 @@ buildroot-0.1.2 2007-11-06 &lt;spudmonkey@racsa.co.cr&gt
 nuttx-0.3.20 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 	* Initial release of a tiny windowing system for NuttX (not well tested at initial check-in)
 	* Add fixed precision sin() and cos() (not well tested at initial check-in)
+	* Add an X11-based simulated framebuffer driver
+	* The simulated target now has an option (CONFIG_SIM_WALLTIME) that will let the simulation
+	  run in more-or-less realtime.
 
 pascal-0.1.3 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
