@@ -56,8 +56,6 @@
  * Pre-Processor Definitions
  ****************************************************************************/
 
-#define NX_NCOLORS 256
-
 /****************************************************************************
  * Private Types
  ****************************************************************************/
